--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,7 @@ body {
 
 img {
   width: 100%;
+  height: auto;
 }
 
 a {
@@ -98,7 +99,7 @@ footer {
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 37em) {
   .container {
     grid-template-columns: repeat(4, auto);
     grid-template-areas:
@@ -110,14 +111,14 @@ footer {
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 48em) {
   .container {
     gap: 2rem;
   }
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {
+@media only screen and (min-width: 62em) {
   .container {
     grid-template-columns: repeat(6, 1fr);
     grid-auto-rows: min-content;
@@ -128,7 +129,7 @@ footer {
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 75em) {
   .container {
     gap: 3rem;
   }
@@ -149,4 +150,12 @@ footer {
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
+}
+
+.visually-hidden {
+  position: absolute;
+  left: -10000px;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
 }
